# koursework1

./: .gitignore  README.md  pyproject.toml
src/: api.py  main.py  storage.py  utils.py  vacancies.json  vacancy.py
tests/: test_api.py  test_main.py  test_storage.py  test_utils.py  test_vacancy.py  vacancies.json
